--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
-.site-header{
+.list-none{
+  list-style: none;
+}
+
+.site-header {
   background-color: white;
 }
 
-.sitenav-link{
+.sitenav-link {
   font-weight: 500;
   font-size: 13px;
   line-height: 15px;
@@ -10,4 +14,51 @@
   color: black;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.main-link {
+  background-color: orange;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 15.23px;
+  letter-spacing: 0.5px;
+  color: white;
+  text-decoration: none;
+}
+
+.hero-section {
+  background-color: #252420;
+}
+
+.hero-content {
+  width: 390px;
+  color: #fff;
+}
+
+.orange-line {
+  background-color: orange;
+  width: 80px;
+  height: 3px;
+}
+
+.hero-title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0.5px;
+}
+
+.hero-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+.feature-title{
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 86.4px;
+  letter-spacing: 0.5px;
+  
 }
