--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.list-none{
+.list-none {
   list-style: none;
 }
 
@@ -55,10 +55,68 @@
   letter-spacing: 0.5px;
 }
 
-.feature-title{
+.feature-title {
   font-size: 72px;
   font-weight: 700;
   line-height: 86.4px;
   letter-spacing: 0.5px;
-  
+}
+
+.feature-iten {
+  width: 340px;
+  color: #000;
+}
+
+.featuer-iten-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28.8px;
+  letter-spacing: 0.5px;
+}
+
+.feature-iten-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+.sale {
+  background-color: #252420;
+  color: #fff;
+}
+
+.sale-content {
+  width: 440px;
+}
+
+.sale-title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0.5px;
+}
+
+.sale-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+.site-footer{
+  background-color: #fafafa;
+}
+
+.site-footer-divider{
+  background-color: #25242080;
+  height: 2px;
+}
+
+.footer-link{
+font-weight: 400;
+font-size: 16px;
+line-height: 18px;
+color: #25242080;
+text-decoration: none;
 }
