--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 
 .main-link {
-  background-color: orange;
+  background-color: #ff7500;
   font-weight: 700;
   font-size: 13px;
   line-height: 15.23px;
@@ -36,7 +36,7 @@
 }
 
 .orange-line {
-  background-color: orange;
+  background-color:#ff7500;
   width: 80px;
   height: 3px;
 }
