--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@
   margin: 0;
 }
 
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .list-none {
   list-style: none;
   padding: 0;
@@ -35,6 +41,7 @@
   padding-top: 16px;
   padding: 16px 0;
 }
+
 
 .site-header-nav {
   display: flex;
@@ -95,10 +102,13 @@
 
 .hero-section {
   background-color: #252420;
+  padding: 80px 0;
+}
+
+.hero-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 80px 0;
 }
 
 .hero-section img {
@@ -114,7 +124,7 @@
   background-color: #FF7500;
   width: 80px;
   height: 3px;
-  border: none;
+  border: 0;
 }
 
 .hero-title {
@@ -122,6 +132,8 @@
   font-weight: 700;
   line-height: 48px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 24px;
 }
 
 .hero-text {
@@ -131,7 +143,7 @@
   letter-spacing: 0.5px;
 }
 
-.feature-section{
+.feature-section {
   padding: 210px 0px;
 }
 
@@ -142,10 +154,16 @@
   letter-spacing: 0.5px;
 }
 
+.feature-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .feature-item {
   width: 340px;
   color: #000;
-  
+
 }
 
 .feature-item-title {
@@ -153,6 +171,8 @@
   font-weight: 700;
   line-height: 28.8px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 12px;
 }
 
 .feature-item-text {
@@ -162,9 +182,14 @@
   letter-spacing: 0.5px;
 }
 
-.sale {
+.sale-container {
   background-color: #252420;
   color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 12px;
+  padding: 64px;
 }
 
 .sale-content {
@@ -187,6 +212,22 @@
 
 .site-footer {
   background-color: #F8F8F8;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-top-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-bottom {
+  display: flex;
+  gap: 72px;
 }
 
 .site-footer-divider {
