--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,23 @@
 
 * {
   font-family: "Roboto", sans-serif;
-  margin: 0;
+  box-sizing: border-box;
 }
 
 .container {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.orange-line {
+  background-color: #FF7500;
+  width: 80px;
+  height: 3px;
+  border: 0;
+  margin: 0;
+  display: flex;
+
 }
 
 .list-none {
@@ -34,12 +44,15 @@
 
 .site-header {
   background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-top: 5px solid #FF7500;
   padding-top: 16px;
   padding: 16px 0;
+}
+
+.header-contanier {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
@@ -120,12 +133,12 @@
   color: #fff;
 }
 
-.orange-line {
-  background-color: #FF7500;
-  width: 80px;
-  height: 3px;
-  border: 0;
+
+
+.hero-line {
+  margin-bottom: 40px;
 }
+
 
 .hero-title {
   font-size: 40px;
